2001-09-01  Michael Hope  <michaelh@juju.net.nz>

	* support/regression/ports/host/spec.mk: Updated to compile with the new type specifiers.

	* device/lib/Makefile.in (Z80SOURCES): Removed old _mululong, _mulslong, and unneeded _mulint.

	* device/lib/_mullong.c (_mulslong): Changed to actually return a value :)

2001-08-30  Paul Stoffregen  <paul@pjrc.com>

	* added peepholes 223 to 231 to mcs51 port.  These improve code when using large model.

2001-08-30  Michael Hope  <michaelh@juju.net.nz>

	* device/lib/gbz80/crt0.s (init): Fixed up support for the gbz80 such that it will at least run (and fail badly) the regression tests.

	* src/z80/gen.c (genPlus): Changed bad long add for gb to a fall through.

2001-08-29  Michael Hope  <michaelh@juju.net.nz>

	* link/z80/aslink.h: Fixed long file name support.  Is now based off PATH_MAX instead of a constant.

	* src/z80/gen.c: Fixed add and sub for the case where left or right are in static space.

2001-08-30 Bernhard Held   <bernhard@bernhardheld.de>

  * sim/ucsim/configure:    little improvement of Cygwin-detection	
  * sim/ucsim/configure.in: little improvement of Cygwin-detection	
  * sim/ucsim/cmd.src/newcmdcl.h: include <sys/types.h> to define fd_set automated build
  * support/regression/tests/bug-221100.c: small changes for mcs51
  * support/regression/tests/bug-221168.c: small changes for mcs51
  * support/regression/tests/bug-227710.c: small changes for mcs51
  * support/regression/tests/staticinit.c: small changes for mcs51
  * as/mcs51/aslink.h: accept everything as symbol name in rel-files, bug fix ID 452601
  * as/mcs51/lklex.c:  accept everything as symbol name in rel-files, bug fix ID 452601
  * as/mcs51/lksym.c:  accept everything as symbol name in rel-files, bug fix ID 452601